--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyBcpEkRrnttWoTnzMXQsgyHU38BnZTxWaQ
 
 JWT_SECRET=your_jwt_secret_key
-REACT_APP_BACKEND_URL = https://snorbackend.onrender.com
+REACT_APP_BACKEND_URL = http://localhost:5000
 
